[gd_scene load_steps=11 format=2]

[ext_resource path="res://Gamer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://retry_button.png" type="Texture" id=2]
[ext_resource path="res://exit_button.png" type="Texture" id=3]
[ext_resource path="res://game_over_menu.gd" type="Script" id=4]
[ext_resource path="res://scene_transition_rect.tscn" type="PackedScene" id=5]
[ext_resource path="res://exit_button_pushed.png" type="Texture" id=6]
[ext_resource path="res://retry_button_pushed.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.341176, 0.301961, 0.262745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="game_over_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry_button" type="TextureButton" parent="."]
margin_left = 296.0
margin_top = 192.0
margin_right = 344.0
margin_bottom = 240.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_button" type="TextureButton" parent="."]
margin_left = 296.0
margin_top = 256.0
margin_right = 344.0
margin_bottom = 304.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_over_label" type="Label" parent="."]
margin_left = 200.0
margin_top = 24.0
margin_right = 424.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.14902, 1, 1 )
custom_colors/font_color_shadow = Color( 0.658824, 0, 0.788235, 1 )
custom_constants/shadow_offset_x = 2
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore_label" type="Label" parent="."]
margin_left = 232.0
margin_top = 88.0
margin_right = 410.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.596078, 0, 0.643137, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Your best is:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best" type="Label" parent="."]
margin_left = 280.0
margin_top = 128.0
margin_right = 353.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.65098, 0, 0.501961, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scene_transition_rect" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="retry_button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
